tests/negative/test_custom_redef_local.orb
custom Foo i32;

fnc main () () {
    custom::global Foo bool;
};